--- a/src/librarySystemcodes/LibraryHome.form
+++ b/src/librarySystemcodes/LibraryHome.form
@@ -4110,11 +4110,11 @@
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jLabel6" min="-2" pref="30" max="-2" attributes="0"/>
-                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                          <Component id="comboListCategory" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="comboBoxList" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="txtListId" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel133" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="comboListCategory" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="jLabel135" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -4177,7 +4177,7 @@
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jScrollPane9" min="-2" pref="614" max="-2" attributes="0"/>
+                          <Component id="jScrollPane9" pref="614" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="103" groupAlignment="3" attributes="0">
