sql updates in code

--- a/src/librarySystemcodes/DialogEditStudentList.form
+++ b/src/librarySystemcodes/DialogEditStudentList.form
@@ -323,6 +323,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lblForm">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="sansserif" size="12" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="form"/>
           </Properties>
         </Component>
